# sumbu_aging_test

./: CMakeLists.txt  partitions_custom.csv  sdkconfig  sdkconfig.old  secure_boot_signing_key.pem
main/: CMakeLists.txt  main.c
main/app/inc/: can_comm.h
main/app/src/: can_comm.c
main/bsp/drivers/: sys_twai.c  sys_twai.h
